{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 115,
  "lineage": "de230a7b-8857-9ba0-0aa8-7544e9e3d8ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01a303edfa7d4e8fb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-0-55.compute-1.amazonaws.com",
            "public_ip": "3.212.0.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inspection_device",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:428469465973:instance/i-0b258583beaac1dd7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b258583beaac1dd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "noof",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d2713a89d215ad7c"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0beca48bb4e55877b"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-0297dad16b546840c"
              }
            ],
            "primary_network_interface_id": "eni-0d2713a89d215ad7c",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05860ec6c36fa6525",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08627b6e72b79a55c",
            "tags": {
              "Name": "sslo-inspection-device"
            },
            "tags_all": {
              "Name": "sslo-inspection-device"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d99f15f94ac9a35"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_network_interface.sslo_inspection_device_dmz1",
            "aws_network_interface.sslo_inspection_device_dmz2",
            "aws_network_interface.sslo_inspection_device_management",
            "aws_security_group.sslo_inspection_zone",
            "aws_security_group.sslo_management",
            "aws_subnet.DMZ1",
            "aws_subnet.DMZ2",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029bfac3973c1bda1",
            "arn": "arn:aws:ec2:us-east-1:428469465973:instance/i-0f13cfbc5809b63ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f13cfbc5809b63ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "noof",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0016518ba7ff53a32"
              }
            ],
            "primary_network_interface_id": "eni-0016518ba7ff53a32",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-3-212-0-55.compute-1.amazonaws.com",
            "public_ip": "3.212.0.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095e177f438980d2a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08627b6e72b79a55c",
            "tags": {
              "Name": "sslo-jumpbox"
            },
            "tags_all": {
              "Name": "sslo-jumpbox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d99f15f94ac9a35"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_network_interface.sslo_jumpbox_management",
            "aws_security_group.sslo_management",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sslo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08257c0c5bb79a3f1",
            "arn": "arn:aws:ec2:us-east-1:428469465973:instance/i-09ba24909f322766f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 900,
                "snapshot_id": "snap-02b918b48339b3bb7",
                "throughput": 0,
                "volume_id": "vol-0935c709ffa22e0a0",
                "volume_size": 300,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ba24909f322766f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "noof",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cb3b7a3bf378faa1"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-011e0acd4e672dc3e"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-0a996d1d868871e8b"
              },
              {
                "delete_on_termination": false,
                "device_index": 3,
                "network_interface_id": "eni-091e7ffc97b2b1023"
              },
              {
                "delete_on_termination": false,
                "device_index": 4,
                "network_interface_id": "eni-081725f9208155478"
              }
            ],
            "primary_network_interface_id": "eni-0cb3b7a3bf378faa1",
            "private_dns": "ip-10-0-1-133.ec2.internal",
            "private_ip": "10.0.1.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 900,
                "throughput": 0,
                "volume_id": "vol-0935c709ffa22e0a0",
                "volume_size": 300,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08627b6e72b79a55c",
            "tags": {
              "Name": "sslo-bigip"
            },
            "tags_all": {
              "Name": "sslo-bigip"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d99f15f94ac9a35"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_network_interface.sslo_bigip_dmz1",
            "aws_network_interface.sslo_bigip_dmz2",
            "aws_network_interface.sslo_bigip_external",
            "aws_network_interface.sslo_bigip_internal",
            "aws_network_interface.sslo_bigip_management",
            "aws_security_group.sslo_external",
            "aws_security_group.sslo_inspection_zone",
            "aws_security_group.sslo_internal",
            "aws_security_group.sslo_management",
            "aws_subnet.DMZ1",
            "aws_subnet.DMZ2",
            "aws_subnet.external",
            "aws_subnet.internal",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db50ca6dcf3dec27",
            "arn": "arn:aws:ec2:us-east-1:428469465973:instance/i-0f9d8418d58eea7a6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9d8418d58eea7a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "noof",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-09d8bc4983cda06fd"
              }
            ],
            "primary_network_interface_id": "eni-09d8bc4983cda06fd",
            "private_dns": "ip-10-0-5-161.ec2.internal",
            "private_ip": "10.0.5.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c524b5de7e436c5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cbc683cc3623e5b7",
            "tags": {
              "Name": "sslo-webapp-server"
            },
            "tags_all": {
              "Name": "sslo-webapp-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cca228da094141a6"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_network_interface.sslo_test_webapp",
            "aws_security_group.sslo_internal",
            "aws_subnet.internal",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sslo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:internet-gateway/igw-0fd8497dbe8abaad0",
            "id": "igw-0fd8497dbe8abaad0",
            "owner_id": "428469465973",
            "tags": {
              "Name": "sslo-igw"
            },
            "tags_all": {
              "Name": "sslo-igw"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "sslo-main-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49314b544c1e08a",
            "original_route_table_id": "rtb-09c1a248748ff9fd2",
            "route_table_id": "rtb-0b2c4c3ad2e2392d5",
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_route_table.sslo-route-table",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_bigip_dmz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-091e7ffc97b2b1023",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:8e:98:06:c4:6d",
            "private_dns_name": "ip-10-0-3-119.ec2.internal",
            "private_ip": "10.0.3.119",
            "private_ips": [
              "10.0.3.119"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0add604271a4cf9b8"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08187bb0995c667bc",
            "tags": {
              "Name": "sslo_dmz1_bigip_interface"
            },
            "tags_all": {
              "Name": "sslo_dmz1_bigip_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_inspection_zone",
            "aws_subnet.DMZ1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_bigip_dmz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-081725f9208155478",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:87:24:f0:89:bd",
            "private_dns_name": "ip-10-0-4-70.ec2.internal",
            "private_ip": "10.0.4.70",
            "private_ips": [
              "10.0.4.70"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0add604271a4cf9b8"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f37e2babc1d0bb84",
            "tags": {
              "Name": "sslo_dmz2_bigip_interface"
            },
            "tags_all": {
              "Name": "sslo_dmz2_bigip_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_inspection_zone",
            "aws_subnet.DMZ2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_bigip_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-011e0acd4e672dc3e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:3e:46:95:86:07",
            "private_dns_name": "ip-10-0-2-20.ec2.internal",
            "private_ip": "10.0.2.20",
            "private_ips": [
              "10.0.2.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dfadb203e460e6f3"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ad512c9c9b75eb0c",
            "tags": {
              "Name": "sslo_external_bigip_interface"
            },
            "tags_all": {
              "Name": "sslo_external_bigip_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_external",
            "aws_subnet.external",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_bigip_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0a996d1d868871e8b",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:c6:1e:17:52:35",
            "private_dns_name": "ip-10-0-5-124.ec2.internal",
            "private_ip": "10.0.5.124",
            "private_ips": [
              "10.0.5.124"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cca228da094141a6"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cbc683cc3623e5b7",
            "tags": {
              "Name": "sslo_internal_bigip_interface"
            },
            "tags_all": {
              "Name": "sslo_internal_bigip_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_internal",
            "aws_subnet.internal",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_bigip_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0cb3b7a3bf378faa1",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:4f:cb:11:f7:07",
            "private_dns_name": "ip-10-0-1-133.ec2.internal",
            "private_ip": "10.0.1.133",
            "private_ips": [
              "10.0.1.133"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05d99f15f94ac9a35"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08627b6e72b79a55c",
            "tags": {
              "Name": "sslo_management_bigip_interface"
            },
            "tags_all": {
              "Name": "sslo_management_bigip_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_management",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_inspection_device_dmz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0beca48bb4e55877b",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:96:38:53:d1:55",
            "private_dns_name": "ip-10-0-3-86.ec2.internal",
            "private_ip": "10.0.3.86",
            "private_ips": [
              "10.0.3.86"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0add604271a4cf9b8"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08187bb0995c667bc",
            "tags": {
              "Name": "sslo_inspection_device_dmz1"
            },
            "tags_all": {
              "Name": "sslo_inspection_device_dmz1"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_inspection_zone",
            "aws_subnet.DMZ1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_inspection_device_dmz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0297dad16b546840c",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:01:c9:df:a9:6b",
            "private_dns_name": "ip-10-0-4-230.ec2.internal",
            "private_ip": "10.0.4.230",
            "private_ips": [
              "10.0.4.230"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0add604271a4cf9b8"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f37e2babc1d0bb84",
            "tags": {
              "Name": "sslo_inspection_device_dmz2"
            },
            "tags_all": {
              "Name": "sslo_inspection_device_dmz2"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_inspection_zone",
            "aws_subnet.DMZ2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_inspection_device_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0d2713a89d215ad7c",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:42:92:e3:6b:0f",
            "private_dns_name": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "private_ips": [
              "10.0.1.57"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05d99f15f94ac9a35"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08627b6e72b79a55c",
            "tags": {
              "Name": "sslo_inspection_device_management"
            },
            "tags_all": {
              "Name": "sslo_inspection_device_management"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_management",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_jumpbox_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0016518ba7ff53a32",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:25:d8:dd:f2:bb",
            "private_dns_name": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "private_ips": [
              "10.0.1.71"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05d99f15f94ac9a35"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08627b6e72b79a55c",
            "tags": {
              "Name": "sslo_management_jumpbox_interface"
            },
            "tags_all": {
              "Name": "sslo_management_jumpbox_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_management",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sslo_test_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-09d8bc4983cda06fd",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:53:b6:c4:00:91",
            "private_dns_name": "ip-10-0-5-161.ec2.internal",
            "private_ip": "10.0.5.161",
            "private_ips": [
              "10.0.5.161"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cca228da094141a6"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cbc683cc3623e5b7",
            "tags": {
              "Name": "sslo_test_webapp"
            },
            "tags_all": {
              "Name": "sslo_test_webapp"
            }
          },
          "dependencies": [
            "aws_security_group.sslo_internal",
            "aws_subnet.internal",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sslo-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:route-table/rtb-0b2c4c3ad2e2392d5",
            "id": "rtb-0b2c4c3ad2e2392d5",
            "owner_id": "428469465973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd8497dbe8abaad0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sslo-route-table"
            },
            "tags_all": {
              "Name": "sslo-route-table"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslo-route-table-DMZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4a6b882391375a",
            "route_table_id": "rtb-0b2c4c3ad2e2392d5",
            "subnet_id": "subnet-08187bb0995c667bc"
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_route_table.sslo-route-table",
            "aws_subnet.DMZ1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslo-route-table-DMZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad10e79fb61eb481",
            "route_table_id": "rtb-0b2c4c3ad2e2392d5",
            "subnet_id": "subnet-0f37e2babc1d0bb84"
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_route_table.sslo-route-table",
            "aws_subnet.DMZ2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslo-route-table-Internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aacc7a78631f046",
            "route_table_id": "rtb-0b2c4c3ad2e2392d5",
            "subnet_id": "subnet-0cbc683cc3623e5b7"
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_route_table.sslo-route-table",
            "aws_subnet.internal",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslo-route-table-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9ce4ff395073e2",
            "route_table_id": "rtb-0b2c4c3ad2e2392d5",
            "subnet_id": "subnet-0ad512c9c9b75eb0c"
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_route_table.sslo-route-table",
            "aws_subnet.external",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslo-route-table-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed7d56b86cfb3799",
            "route_table_id": "rtb-0b2c4c3ad2e2392d5",
            "subnet_id": "subnet-08627b6e72b79a55c"
          },
          "dependencies": [
            "aws_internet_gateway.sslo_igw",
            "aws_route_table.sslo-route-table",
            "aws_subnet.management",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sslo_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:security-group/sg-0dfadb203e460e6f3",
            "description": "sslo_sg_external",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfadb203e460e6f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sslo_sg_external",
            "name_prefix": "",
            "owner_id": "428469465973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sslo_sg_external"
            },
            "tags_all": {
              "Name": "sslo_sg_external"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sslo_inspection_zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:security-group/sg-0add604271a4cf9b8",
            "description": "sslo_sg_inspection_zone",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0add604271a4cf9b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sslo_sg_inspection_zone",
            "name_prefix": "",
            "owner_id": "428469465973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sslo_sg_inspection_zone"
            },
            "tags_all": {
              "Name": "sslo_sg_inspection_zone"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sslo_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:security-group/sg-0cca228da094141a6",
            "description": "sslo_sg_internal",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cca228da094141a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sslo_sg_internal",
            "name_prefix": "",
            "owner_id": "428469465973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sslo_sg_internal"
            },
            "tags_all": {
              "Name": "sslo_sg_internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sslo_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:security-group/sg-05d99f15f94ac9a35",
            "description": "sslo_sg_management",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d99f15f94ac9a35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sslo_sg_management",
            "name_prefix": "",
            "owner_id": "428469465973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sslo_sg_management"
            },
            "tags_all": {
              "Name": "sslo_sg_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DMZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:subnet/subnet-08187bb0995c667bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08187bb0995c667bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428469465973",
            "tags": {
              "Group_Name": "DMZ1",
              "Name": "DMZ1"
            },
            "tags_all": {
              "Group_Name": "DMZ1",
              "Name": "DMZ1"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DMZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:subnet/subnet-0f37e2babc1d0bb84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f37e2babc1d0bb84",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428469465973",
            "tags": {
              "Group_Name": "DMZ2",
              "Name": "DMZ2"
            },
            "tags_all": {
              "Group_Name": "DMZ2",
              "Name": "DMZ2"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:subnet/subnet-0ad512c9c9b75eb0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ad512c9c9b75eb0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428469465973",
            "tags": {
              "Group_Name": "sslo-external",
              "Name": "sslo-external"
            },
            "tags_all": {
              "Group_Name": "sslo-external",
              "Name": "sslo-external"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:subnet/subnet-0cbc683cc3623e5b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0cbc683cc3623e5b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428469465973",
            "tags": {
              "Group_Name": "internal",
              "Name": "internal"
            },
            "tags_all": {
              "Group_Name": "internal",
              "Name": "internal"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:subnet/subnet-08627b6e72b79a55c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08627b6e72b79a55c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428469465973",
            "tags": {
              "Group_Name": "sslo-management",
              "Name": "sslo-management"
            },
            "tags_all": {
              "Group_Name": "sslo-management",
              "Name": "sslo-management"
            },
            "vpc_id": "vpc-046c7c8d5618ce684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428469465973:vpc/vpc-046c7c8d5618ce684",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004578e7ad15c3d13",
            "default_route_table_id": "rtb-09c1a248748ff9fd2",
            "default_security_group_id": "sg-00b5b6bf9964c87e4",
            "dhcp_options_id": "dopt-01d8bf79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046c7c8d5618ce684",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09c1a248748ff9fd2",
            "owner_id": "428469465973",
            "tags": {
              "Name": "terraform-aws-sslo"
            },
            "tags_all": {
              "Name": "terraform-aws-sslo"
            }
          }
        }
      ]
    }
  ]
}